--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,10 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".Clipay"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/app_name">
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -29,8 +30,13 @@
         <activity
             android:name=".ui.activity.ContentCreationActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/MyTheme" />
-        <activity android:name=".ui.activity.PixEditorActivity"></activity>
+            android:theme="@style/MyTheme"
+            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".ui.activity.PixEditorActivity" />
+        <activity
+            android:name=".ui.activity.CommentActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/MyTheme"></activity>
     </application>
 
 </manifest>
