--- a/EditPhoto/app/build.gradle
+++ b/EditPhoto/app/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -26,26 +30,15 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
     implementation 'com.github.chrisbanes:PhotoView:2.1.4'
-
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
-
-    implementation 'com.squareup.picasso:picasso:2.5.2'
-
     implementation 'com.wang.avi:library:2.1.3'
-
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
-    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
-
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
-
     implementation 'com.github.krokyze:ucropnedit:2.2.1-native'
-
     implementation 'com.github.hoanganhtuan95ptit:TwoLineSeekBar:1.0'
-
-//    implementation 'com.hoanganhtuan95ptit.permission:permission:1.0.0'
     implementation 'com.wang.avi:library:2.1.3'
     implementation 'com.github.hoanganhtuan95ptit:TwoLineSeekBar:1.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-
 }
