--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         targetSdkVersion project.ext.myTargetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     compileOptions {
@@ -33,6 +34,7 @@ dependencies {
     implementation project(':pix')
     implementation project(':ariana')
     implementation project(':phonefield')
+    implementation project(':texteditor')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'com.google.android.material:material:1.0.0-beta01'
@@ -70,12 +72,12 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
     implementation 'com.tbuonomo:morph-bottom-navigation:1.0.1'
     implementation 'com.github.chrisbanes:PhotoView:2.1.4'
-    implementation 'com.github.zomato:androidphotofilters:1.0.1'
     implementation group: 'androidx.palette', name: 'palette-ktx', version: '1.0.0-beta01'
     implementation 'ja.burhanrashid52:photoeditor:0.2.1'
     implementation 'com.google.android.exoplayer:exoplayer:r2.5.1'
     implementation 'com.github.mukeshsolanki:photofilter:1.0.3'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
+    implementation 'com.github.QuadFlask:colorpicker:0.0.13'
     implementation project(path: ':PhotoEdit')
 }
