--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':app', ':login2', ':pix', ':ariana', ':VideoCam', ':phonefield', ':PhotoEdit', ':rotate', ':fillter', ':brightness', ':crop', ':contrast', ':saturation'
+include ':app', ':login2', ':pix', ':ariana', ':VideoCam', ':phonefield', ':PhotoEdit', ':texteditor'
 project(':pix').projectDir = new File('PixImagePicker/pix')
 project(':ariana').projectDir = new File('ArianaGrad/ariana')
 project(':PhotoEdit').projectDir = new File('EditPhoto/app')
