--- a/EditPhoto/app/build.gradle
+++ b/EditPhoto/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation 'com.wang.avi:library:2.1.3'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
-    implementation 'com.github.krokyze:ucropnedit:2.2.1-native'
+    implementation 'com.github.yalantis:ucrop:2.2.2'
     implementation 'com.github.hoanganhtuan95ptit:TwoLineSeekBar:1.0'
     implementation 'com.wang.avi:library:2.1.3'
     implementation 'com.github.hoanganhtuan95ptit:TwoLineSeekBar:1.0'
