--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,17 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'com.getkeepsafe.dexcount'
+
 android {
+    signingConfigs {
+        config {
+            keyAlias 'key0'
+            keyPassword '1234567890'
+            storeFile file('/Users/manoharpeswani/Desktop/testkey')
+            storePassword '1234567890'
+        }
+    }
     compileSdkVersion project.ext.myCompileSdkVersion
     buildToolsVersion project.ext.myBuildToolsVersion
     defaultConfig {
@@ -22,9 +32,13 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
+    }
+    productFlavors {
     }
 }
 
@@ -42,22 +56,22 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0-beta01'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
     testImplementation 'junit:junit:4.12'
-//    implementation 'com.google.firebase:firebase-messaging:17.1.0'
+    //    implementation 'com.google.firebase:firebase-messaging:17.1.0'
     //    implementation 'com.google.firebase:firebase-storage:16.0.1'
     //    implementation "com.google.firebase:firebase-invites:16.0.0"
-//    implementation 'com.google.firebase:firebase-database:16.0.1'
-//    implementation 'com.google.firebase:firebase-firestore:17.0.2'
-//    implementation 'com.google.firebase:firebase-core:16.0.1'
-//    implementation 'com.google.firebase:firebase-auth:16.0.2'
-//    implementation 'com.google.android.gms:play-services-auth:15.0.1'
+    //    implementation 'com.google.firebase:firebase-database:16.0.1'
+    //    implementation 'com.google.firebase:firebase-firestore:17.0.2'
+    //    implementation 'com.google.firebase:firebase-core:16.0.1'
+    //    implementation 'com.google.firebase:firebase-auth:16.0.2'
+    //    implementation 'com.google.android.gms:play-services-auth:15.0.1'
     //    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
     testImplementation 'junit:junit:4.12'
-//    implementation 'com.facebook.android:facebook-login:4.33.0'
-//    implementation 'com.facebook.android:facebook-share:4.31.0'
+    //    implementation 'com.facebook.android:facebook-login:4.33.0'
+    //    implementation 'com.facebook.android:facebook-share:4.31.0'
     implementation 'com.blankj:utilcode:1.15.1'
-//    implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
-//    implementation 'com.twitter.sdk.android:tweet-composer:3.1.1'
-//    implementation 'com.google.android.gms:play-services-plus:15.0.1'
+    //    implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
+    //    implementation 'com.twitter.sdk.android:tweet-composer:3.1.1'
+    //    implementation 'com.google.android.gms:play-services-plus:15.0.1'
     implementation "androidx.core:core-ktx:$rootProject.ktxVersion"
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.mikhaellopez:circularimageview:3.0.2'
@@ -73,9 +87,9 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
     implementation 'com.tbuonomo:morph-bottom-navigation:1.0.1'
     implementation 'com.github.chrisbanes:PhotoView:2.1.4'
-    implementation group: 'androidx.palette', name: 'palette-ktx', version: '1.0.0-beta01'
+    implementation 'androidx.palette:palette-ktx:1.0.0-beta01'
     implementation 'ja.burhanrashid52:photoeditor:0.2.1'
-    implementation 'com.google.android.exoplayer:exoplayer:r2.5.1'
+    implementation 'com.google.android.exoplayer:exoplayer:2.8.2'
     implementation 'com.github.mukeshsolanki:photofilter:1.0.3'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
