--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,14 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0-alpha03'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.8.3'
+        classpath 'io.fabric.tools:gradle:1.+'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -44,7 +47,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
-
+        maven { url 'https://maven.fabric.io/public' }
     }
     project.ext {
         myBuildToolsVersion = "28.0.0" //String
