--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,11 @@
         android:name=".Clipay"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name">
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".ui.activity.HomePage"
             android:configChanges="keyboardHidden|keyboard|orientation"
@@ -23,9 +24,7 @@
             android:screenOrientation="portrait"
             android:theme="@style/MyTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
         <activity
@@ -37,17 +36,17 @@
         <activity
             android:name=".ui.activity.CommentActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/MyTheme"></activity>
+            android:theme="@style/MyTheme" />
 
         <service
-            android:name=".exo.DemoDownloadService"
+            android:name=".exo.VideoDownloadService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.exoplayer.downloadService.action.INIT" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </service>
-
         <service
             android:name="com.google.android.exoplayer2.scheduler.PlatformScheduler$PlatformSchedulerService"
             android:exported="true"
@@ -56,6 +55,8 @@
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="f87f69cea815323b5cdf13a7a6482b224b690fa5" />
+
+        <activity android:name=".ui.activity.ProfileActivity"></activity>
     </application>
 
 </manifest>
