--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
         config {
             keyAlias 'key0'
             keyPassword '1234567890'
-            storeFile file('/Users/manoharpeswani/Desktop/testkey')
+            storeFile file('/User/manoharpeswani/Desktop/testkey')
             storePassword '1234567890'
         }
     }
@@ -57,6 +57,7 @@ dependencies {
     implementation project(':ariana')
     implementation project(':phonefield')
     implementation project(':texteditor')
+    implementation project(':cliplaynetworking')
     implementation project(path: ':PhotoEdit')
     implementation project(path: ':brvahRecyclerview')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -111,6 +112,8 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
     implementation "com.squareup.retrofit2:converter-gson:2.3.0"
     implementation("com.squareup.okhttp3:okhttp:3.8.1")
+    implementation 'com.google.firebase:firebase-auth:16.0.2'
+
 }
 configurations.all() {
     resolutionStrategy.force "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
