--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
         config {
             keyAlias 'key0'
             keyPassword '1234567890'
-            storeFile file('/User/manoharpeswani/Desktop/testkey')
+            storeFile file('/Users/manoharpeswani/Desktop/testkey')
             storePassword '1234567890'
         }
     }
@@ -61,20 +61,18 @@ dependencies {
     implementation project(path: ':PhotoEdit')
     implementation project(path: ':brvahRecyclerview')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
-    implementation 'com.google.android.material:material:1.0.0-beta01'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
+    implementation 'com.google.android.material:material:1.1.0-alpha07'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     //    implementation 'com.google.firebase:firebase-messaging:17.1.0'
     //    implementation 'com.google.firebase:firebase-storage:16.0.1'
     //    implementation "com.google.firebase:firebase-invites:16.0.0"
-    implementation 'com.google.firebase:firebase-database:16.0.1'
+    implementation 'com.google.firebase:firebase-database:17.0.0'
     //    implementation 'com.google.firebase:firebase-firestore:17.0.2'
-    implementation 'com.google.firebase:firebase-core:16.0.1'
-
+    implementation 'com.google.firebase:firebase-core:16.0.9'
     //    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
     testImplementation 'junit:junit:4.12'
-
     //    implementation 'com.facebook.android:facebook-share:4.31.0'
     implementation 'com.blankj:utilcode:1.15.1'
     //    implementation 'com.twitter.sdk.android:tweet-composer:3.1.1'
@@ -84,36 +82,36 @@ dependencies {
     implementation 'com.mikhaellopez:circularimageview:3.0.2'
     implementation 'com.intuit.ssp:ssp-android:1.0.5'
     implementation 'com.intuit.sdp:sdp-android:1.0.5'
-    implementation 'androidx.multidex:multidex:2.0.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
-    implementation 'androidx.cardview:cardview:1.0.0-beta01'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
-    implementation 'com.tbuonomo:morph-bottom-navigation:1.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha06'
+    //    implementation 'com.tbuonomo:morph-bottom-navigation:1.0.1'
     implementation 'com.github.chrisbanes:PhotoView:2.1.4'
-    implementation 'androidx.palette:palette-ktx:1.0.0-rc01'
+    implementation 'androidx.palette:palette-ktx:1.0.0'
     implementation 'ja.burhanrashid52:photoeditor:0.2.1'
     implementation 'com.google.android.exoplayer:exoplayer:2.8.2'
     implementation 'com.github.mukeshsolanki:photofilter:1.0.3'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
     implementation 'com.github.QuadFlask:colorpicker:0.0.13'
     implementation 'com.airbnb.android:lottie:2.5.5'
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
         transitive = true
     }
     implementation 'com.github.marcoscgdev:Licenser:1.0.2'
-    implementation "com.google.code.gson:gson:$rootProject.gsonVersion"
+    implementation 'com.github.salomonbrys.kotson:kotson:2.5.0'
+    //    implementation "com.google.code.gson:gson:$rootProject.gsonVersion"
     implementation 'br.com.simplepass:loading-button-android:1.14.0'
-    implementation "com.squareup.retrofit2:retrofit:2.3.0"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.3.0"
-    implementation("com.squareup.okhttp3:okhttp:3.8.1")
-    implementation 'com.google.firebase:firebase-auth:16.0.2'
-
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
 }
 configurations.all() {
     resolutionStrategy.force "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
