--- a/brvahRecyclerview/build.gradle
+++ b/brvahRecyclerview/build.gradle
@@ -48,5 +48,5 @@ artifacts {
 dependencies {
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    compileOnly 'androidx.recyclerview:recyclerview:1.0.0-beta01'
+    compileOnly 'androidx.recyclerview:recyclerview:1.1.0-alpha06'
 }
