--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.60'
+    ext.kotlin_version = '1.3.31'
+    ext.dbflow_version = "4.2.3"
     repositories {
         google()
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0-alpha04'
+        classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.8.3'
         classpath 'io.fabric.tools:gradle:1.25.4'
-        classpath 'com.google.gms:google-services:4.0.1'
+        classpath 'com.google.gms:google-services:4.2.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -33,13 +34,14 @@ ext {
     junitVersion = '4.12'
     lifecycleVersion = '1.1.1'
     navigationVersion = '1.0.0-alpha02'
-    kotlinVersion = '1.2.60'
+    kotlinVersion = '1.3.21'
     ktlintVersion = '0.24.0'
-    ktxVersion = '1.0.0-rc01'
+    ktxVersion = '1.0.0-rc02'
     roomVersion = '1.1.1'
     runnerVersion = '1.0.1'
     supportLibraryVersion = '28.0.0-alpha3'
     workVersion = '1.0.0-alpha04'
+    dbflow_version = "4.2.3"
 }
 
 allprojects {
@@ -50,7 +52,7 @@ allprojects {
         maven { url 'https://maven.fabric.io/public' }
     }
     project.ext {
-        myBuildToolsVersion = "28.0.0" //String
+        myBuildToolsVersion = "28.0.3" //String
         myMinSdkVersion = 19 //Integer
         myTargetSdkVersion = 28
         myCompileSdkVersion = 28
@@ -60,13 +62,3 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
-//subprojects {
-//    project.configurations.all {
-//        resolutionStrategy.eachDependency { details ->
-//            if (details.requested.group == 'com.android.support'
-//                    && !details.requested.name.contains('multidex') ) {
-//                details.useVersion "28.0.0-alpha3"
-//            }
-//        }
-//    }
-//}
